k8s/load-balancer/rabbitmq-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /rabbitmq(?:/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: rabbitmq
            port:
              number: 15672
